--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <!--[if lte IE 8]>
 		<script type="text/javascript" src="http://explorercanvas.googlecode.com/svn/trunk/excanvas.js"></script>
 	<![endif]-->
+<script type="text/javascript" src="js/angular.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 <link rel="stylesheet" href="css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen" />
 <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
@@ -29,7 +31,7 @@
 <link href="css/font-awesome.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body ng-app="MyApplication">
 <header class="header">
   <div class="container">
     <nav class="navbar navbar-inverse" role="navigation">
@@ -55,12 +57,12 @@
 </header>
 <!--/.header-->
 <div id="#top"></div>
-<section id="home">
+<section id="home" ng-controller="homeController">
   <div class="banner-container"> <img src="images/banner-bg-code.jpg" alt="banner" />
     <div class="container banner-content">
       <div class="heroText">
         <h2><span>HEllo, I'm</span><br>
-          VinodhRaja</h2>
+          {{myName}}</h2>
         <span class="caption">Frontend Developer/ Backend Developer</span> </div>
     </div>
   </div>
@@ -409,7 +411,7 @@
 
 <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]--> 
 <script src="js/modernizr-latest.js"></script> 
-<script src="js/jquery-1.8.2.min.js" type="text/javascript"></script> 
+<script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script> 
 <script src="js/jquery.isotope.min.js" type="text/javascript"></script> 
 <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script> 
