--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<!--[if lt IE 9]> 
+<!--[if lt IE 9]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
 <title>ME – Resume and Personal Portfolio Responsive Template</title>
@@ -41,11 +41,11 @@
         <a href="#" class="navbar-brand scroll-top logo"><b>Me..</b></a> </div>
       <!--/.navbar-header-->
         <navigation-menu></navigation-menu>
-      <!--/.navbar-collapse--> 
+      <!--/.navbar-collapse-->
     </nav>
-    <!--/.navbar--> 
+    <!--/.navbar-->
   </div>
-  <!--/.container--> 
+  <!--/.container-->
 </header>
 <!--/.header-->
 <div id="#top"></div>
@@ -53,16 +53,16 @@
   <div class="banner-container"> <img src="images/banner-bg-code.jpg" alt="banner" />
     <div class="container banner-content">
       <div class="heroText">
-        <h2><span>HEllo, I'm</span><br>
+        <h2 style="color: red"><span>HEllo, I'm</span><br>
           {{myName}}</h2>
-        <span class="caption">Frontend Developer/ Backend Developer</span> </div>
+        <span class="caption" style="color: red">Frontend Developer/ Fullstack Developer</span> </div>
     </div>
   </div>
 </section>
 <section id="introText">
   <div class="container">
     <div>
-      <h1>I create beautiful responsive websites, Yes I am a UX geek</h1>
+      <h1>I create beautiful responsive websites, Yes I am a UI geek</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium. Cras posuere dolor risus. Pellentesque elementum ultricies quam, sit amet rhoncus nisl viverra in. Cras imperdiet nisi a euismod molestie. Ut a metus arcu. Pellentesque feugiat dictum erat. Nulla vehicula condimentum purus, quis imperdiet nisl ultricies eleifend. Nulla quis rhoncus risus. Ut vel vehicula urna.</p>
     </div>
   </div>
@@ -70,7 +70,7 @@
 <!--About-->
 <section id="aboutUs">
   <div class="container">
-    <div class="row"> 
+    <div class="row">
       <!-- item -->
       <div class="col-md-4 tileBox"> <img width="93%" src="images/photo-2.jpg" alt="me"/> </div>
       <div class="col-md-8 tileBox">
@@ -83,7 +83,7 @@
           Cras eget augue id dui varius pretium.
           Consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius.</p>
       </div>
-      <!-- end: --> 
+      <!-- end: -->
     </div>
   </div>
 </section>
@@ -95,14 +95,14 @@
 	<div class="col-md-12">      <h2>“Dreams are extremely important. You can’t do it unless you imagine it.” <span>-George Lucas</span></h2></div>
       </div>
     </div>
-    <!--/.container--> 
+    <!--/.container-->
   </div>
 </section>
 
 <!--Skills-->
 <section id="skills" class="secPad white">
   <div class="container">
-    <div class="heading "> 
+    <div class="heading ">
       <!-- Heading -->
       <h2>My Skills</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium. Cras posuere dolor risus. Pellentesque elementum ultricies quam, sit amet rhoncus nisl viverra in. Cras imperdiet nisi a euismod molestie. Ut a metus arcu. Pellentesque feugiat dictum erat. </p>
@@ -178,11 +178,11 @@
 <!--Experience-->
 <section id="experience" class="secPad">
 <div class="container">
-<div class="heading"> 
+<div class="heading">
   <!-- Heading -->
   <h2>Experience</h2>
   <br/>
-  <h4>4 Years 7 months Experience!</h4>
+  <h4>9 plus Years Experience!</h4>
   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
 </div>
 <div class="row experience-details">
@@ -234,7 +234,7 @@
 <!--Portfolio-->
 <section id="portfolio" class="page-section section appear clearfix secPad">
   <div class="container">
-    <div class="heading"> 
+    <div class="heading">
       <!-- Heading -->
       <h2>Portfolio</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium. Cras posuere dolor risus. Pellentesque elementum ultricies quam, sit amet rhoncus nisl viverra in. Cras imperdiet nisi a euismod molestie. Ut a metus arcu. Pellentesque feugiat dictum erat.</p>
@@ -343,14 +343,14 @@
 <section id="contactUs" class="page-section secPad">
   <div class="container">
     <div class="row">
-      <div class="heading"> 
+      <div class="heading">
         <!-- Heading -->
         <h2>Let's Keep In Touch!</h2>
-        <p>Thank you for visiting out my profile. If you would like to get into contact with me, please fill out the form below.</p>
+        <p>Thank you for visiting out my profile. If you would like to get into contact with me,</p>
       </div>
     </div>
     <div class="row mrgn30">
-      <form method="post" action="" id="contactfrm" role="form">
+      <form method="post" action="" id="contactfrm" role="form" class="hidden">
         <div class="col-sm-4">
           <div class="form-group">
             <label for="name">Name</label>
@@ -373,18 +373,18 @@
       <div class="col-sm-4">
         <h4>Address:</h4>
         <address>
-        M.VinodhRaja<br>
-        No-30, Bhastvasalam Street<br>
-        Kamaraj Nagar, Sankarapuram, Sithalapakkam, Chennai 600 126, Tamil Nadu, India<br>
+        VinodhRaja Muralidharan<br>
+        22 - Arnold Road<br>
+        Staines - TW181LX - United Kingdom<br>
         </address>
         <h4>Phone:</h4>
         <address>
-        +91 9884873296<br>
+        +44 7440034192<br>
         </address>
       </div>
     </div>
   </div>
-  <!--/.container--> 
+  <!--/.container-->
 </section>
 
 <!--/.page-section-->
@@ -394,23 +394,23 @@
       <div class="col-md-6">
         <div class="social pull-left"> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-flickr"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div>
       </div>
-      <div class="col-md-6"> <span class="pull-right">Copyright 2015 | All Rights Reserved </span> </div>
+      <div class="col-md-6"> <span class="pull-right">Copyright 2019 | All Rights Reserved </span> </div>
     </div>
-    <!-- / .row --> 
+    <!-- / .row -->
   </div>
 </footer>
-<a href="#top" class="topHome"><i class="fa fa-chevron-up fa-2x"></i></a> 
+<a href="#top" class="topHome"><i class="fa fa-chevron-up fa-2x"></i></a>
 
-<!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]--> 
-<script src="js/modernizr-latest.js"></script> 
+<!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
+<script src="js/modernizr-latest.js"></script>
 <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script> 
-<script src="js/jquery.isotope.min.js" type="text/javascript"></script> 
-<script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script> 
-<script src="js/jquery.nav.js" type="text/javascript"></script> 
-<script src="js/jquery.cslider.js" type="text/javascript"></script> 
-<script src="js/jquery.diagram.js"></script> 
-<script src="js/custom.js" type="text/javascript"></script> 
+<script src="js/bootstrap.min.js" type="text/javascript"></script>
+<script src="js/jquery.isotope.min.js" type="text/javascript"></script>
+<script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+<script src="js/jquery.nav.js" type="text/javascript"></script>
+<script src="js/jquery.cslider.js" type="text/javascript"></script>
+<script src="js/jquery.diagram.js"></script>
+<script src="js/custom.js" type="text/javascript"></script>
 <script src="js/owl-carousel/owl.carousel.js"></script>
 </body>
 </html>
