--- a/index.html
+++ b/index.html
@@ -512,6 +512,8 @@
     <!-- / .row -->
   </div>
 </footer>
+<img src="images/vino.png" class="my-image"/>
+
 <a href="#top" class="topHome"><i class="fa fa-chevron-up fa-2x"></i></a>
 
 <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
